traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:14: error: '<-' expected but ')' found.
       for (i <0 to diag){
                        ^TraversalDiagonal:20: error: illegal start of simple expression
     }
     ^